# disco

./: .gitignore  README.md  bot.py  config.py  disco.service  helper.py  launch.sh  pyproject.toml  requirements.txt  ui.py  utils.py
.github/workflows/: restart-service.yml
cogs/: api_commands.py  basic_commands.py  user_commands.py
github/workflows/: restart-service.yml
