[project]
name = "disco"
version = "2.0.0"
description = "A modular Discord bot with various commands and features."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncache>=0.3.1",
    "cachetools>=6.1.0",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "requests>=2.32.4",
]
